--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
     <!-- Floating Hexagon Image -->
     <div class="home-img-floating">
       <div class="img-border">
-        <img src="jenita.png.jpg" alt="Profile Picture">
+        <img src="jenita.jpg" alt="Profile Picture">
       </div>
     </div>
   </section>
